<resources>
    <string name="app_name">XenOne</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="phone">phone</string>
    <string name="username">username</string>
    <string name="sign_out">Sign Out</string>
    <string name="email_pass_error">Incorrect email or password</string>
    <string name="already_used_phone_num">Sorry but such phone number already used</string>
    <string name="already_used_email">Sorry but such email already used</string>
    <string name="error_empty_field">Field can not be empty</string>
    <string name="no_internet">No internet</string>
    <string name="load_failed">Load failed</string>
    <string name="api_url">https://akerbrback.azurewebsites.net/api/service/get/all</string>
    <string name="api_url_post">https://akerbrback.azurewebsites.net/api/service/post/android</string>
    <string name="image_view">image_view</string>
    <string name="tab_2">tab#2</string>
    <string name="enter_new_email">Enter new email</string>
    <string name="save">save</string>
    <string name="enter_new_username">Enter new username</string>
    <string name="uploading">Uploading</string>
    <string name="image_success">Image updated</string>
    <string name="email_success">User email address updated.</string>
    <string name="fail">FAILED.</string>
    <string name="confirm_title">Confirm password:</string>
    <string name="confirm">Confirm</string>
    <string name="name_success">Name updated</string>
    <string name="details">Akerbr\'s details</string>
    <string name="upload_progress">Upload in progress</string>
    <string name="enter_new_cords">Enter new cords</string>
    <string name="cords">Cords</string>
    <string name="enter_new_filling">Enter new filling</string>
    <string name="filling">Filling</string>
    <string name="enter_new_export">Enter new export</string>
    <string name="export">Export</string>
</resources>
