<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="50dp"
    tools:context=".PostActivity">
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/pullToRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/new_image"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        tools:srcCompat="@tools:sample/avatars[0]" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/new_image_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@+id/new_image"
                        android:layout_alignParentTop="true"
                        app:srcCompat="@drawable/ic_add_24"/>
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/enter_new_cords"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/enter_cords"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/cords" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_new_filling"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/enter_filling"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/filling"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_new_export"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/enter_export"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/export" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/send_data"
                    style="@android:style/Widget.Material.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="7dp"
                    android:text="@string/save"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>